# cf10

./: debug-jni-array-memory-crash.md
cpp/: CMakeLists.txt  test_closed_loop.cpp  test_memory_fix  test_memory_fix.cpp
cpp/include/: jni_stub.h.in  tcm_dispenser.h
cpp/src/: tcm_dispenser.cpp
java/: build.gradle  settings.gradle
java/src/main/java/com/tcm/dispenser/: TCMDispenserApp.java
java/src/main/java/com/tcm/dispenser/jni/: TCMDispenserJNI.java
java/src/main/java/com/tcm/dispenser/model/: BlockageEvent.java  CompensationState.java  DispenseTask.java  DispenserStatus.java  MedicineBin.java  Prescription.java  PrescriptionItem.java  WeightSample.java
java/src/main/java/com/tcm/dispenser/service/: DispenserService.java  PrescriptionLoader.java
java/src/main/java/com/tcm/dispenser/view/: MainPanel.java
resources/prescriptions/: sample_prescription.json
scripts/: build_and_run.sh
